kubernetes/apps/apps/external-proxy/duplicati.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: duplicati
  namespace: external-proxy
spec:
  ports:
    - name: http
      port: 8200
      targetPort: 8200
---
apiVersion: v1
kind: Endpoints
metadata:
  name: duplicati
  namespace: external-proxy
subsets:
  - addresses:
      - ip: ${UNRAID_IP}
    ports:
      - name: http
        port: 8200
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duplicati
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-gatekeeper-auth-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/hostname: duplicati.lan.${CLUSTER_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: duplicati.lan.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: duplicati
                port:
                  name: http
