kubernetes/apps/apps/external-proxy/emqx.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: emqx
  namespace: external-proxy
spec:
  ports:
    - name: http
      port: 18083
      targetPort: 18083
---
apiVersion: v1
kind: Endpoints
metadata:
  name: emqx
  namespace: external-proxy
subsets:
  - addresses:
      - ip: ${EMQX_IP}
    ports:
      - name: http
        port: 18083
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-gatekeeper-auth-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/hostname: emqx.lan.${CLUSTER_DOMAIN}
    external-dns.kubernetes.io/hostname: emqx.lan.${CLUSTER_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: emqx.lan.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx
                port:
                  name: http
