kubernetes/apps/apps/external-proxy/framework-cockpit.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: framework-cockpit
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-lan-https-insecure@kubernetescrd
spec:
  ports:
    - name: https
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Endpoints
metadata:
  name: framework-cockpit
  namespace: external-proxy
subsets:
  - addresses:
      - ip: ${FRAMEWORK_COCKPIT_IP}
    ports:
      - name: https
        port: 9090
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: framework-cockpit
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-gatekeeper-auth-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/hostname: framework.lan.${CLUSTER_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: framework.lan.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: framework-cockpit
                port:
                  name: https
