kubernetes/apps/apps/external-proxy/garage-s3.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: garage-s3
  namespace: external-proxy
spec:
  ports:
    - name: s3
      port: 9000
      targetPort: 9000
    - name: web
      port: 3902
      targetPort: 3902
---
apiVersion: v1
kind: Endpoints
metadata:
  name: garage-s3
  namespace: external-proxy
subsets:
  - addresses:
      - ip: ${GARAGE_S3_IP}
    ports:
      - name: s3
        port: 9000
        protocol: TCP
      - name: web
        port: 3902
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-s3
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # Here for docs. Created a wildcard cert directly in Pi-Hole
    #external-dns.kubernetes.io/hostname: s3.${CLUSTER_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: s3.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage-s3
                port:
                  name: s3
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: garage-s3-web
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.kubernetes.io/controller: ignore
spec:
  ingressClassName: traefik
  rules:
    - host: "*.web.${CLUSTER_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: garage-s3
                port:
                  name: web
