kubernetes/apps/apps/external-proxy/home-assistant.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: external-proxy
spec:
  ports:
    - name: http
      port: 8123
      targetPort: 8123
---
apiVersion: v1
kind: Endpoints
metadata:
  name: home
  namespace: external-proxy
subsets:
  - addresses:
      - ip: ${HOME_ASSISTANT_IP}
    ports:
      - name: http
        port: 8123
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/hostname: home.${CLUSTER_DOMAIN}
    external-dns.kubernetes.io/hostname: home.${CLUSTER_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: home.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  name: http
