kubernetes/apps/apps/external-proxy/kopia.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kopia
  namespace: external-proxy
spec:
  ports:
    - name: http
      port: 51515
      targetPort: 51515
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kopia
  namespace: external-proxy
subsets:
  - addresses:
      - ip: ${UNRAID_IP}
    ports:
      - name: http
        port: 51515
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kopia
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-kopia-auth-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/hostname: kopia.lan.${CLUSTER_DOMAIN}
    external-dns.kubernetes.io/hostname: kopia.lan.${CLUSTER_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: kopia.lan.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kopia
                port:
                  name: http
