kubernetes/apps/apps/external-proxy/kvm.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kvm
  namespace: external-proxy
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kvm
  namespace: external-proxy
subsets:
  - addresses:
      - ip: ${KVM_IP}
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kvm
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-gatekeeper-auth-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/hostname: kvm.lan.${CLUSTER_DOMAIN}
    external-dns.kubernetes.io/hostname: kvm.lan.${CLUSTER_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: kvm.lan.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kvm
                port:
                  name: http
