kubernetes/apps/apps/external-proxy/nextcloud.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: external-proxy
spec:
  ports:
    - name: http
      port: 11000
      targetPort: 11000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nextcloud
  namespace: external-proxy
subsets:
  - addresses:
      - ip: 192.168.10.14
    ports:
      - name: http
        port: 11000
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/hostname: cloud.${CLUSTER_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: cloud.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  name: http
