kubernetes/apps/apps/external-proxy/omada.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: omada
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-lan-https-insecure@kubernetescrd
spec:
  ports:
    - name: https
      port: 8043
      targetPort: 8043
---
apiVersion: v1
kind: Endpoints
metadata:
  name: omada
  namespace: external-proxy
subsets:
  - addresses:
      - ip: ${OMADA_IP}
    ports:
      - name: https
        port: 8043
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-gatekeeper-auth-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.kubernetes.io/hostname: omada.lan.${CLUSTER_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: omada.lan.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: omada
                port:
                  name: https
