kubernetes/apps/apps/external-proxy/proxmox-backup.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox-backup
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-lan-https-insecure@kubernetescrd
spec:
  ports:
    - name: https
      port: 8007
      targetPort: 8007
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-backup
  namespace: external-proxy
subsets:
  - addresses:
      - ip: ${PROXMOX_BACKUP_IP}
    ports:
      - name: https
        port: 8007
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox-backup
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.kubernetes.io/hostname: pbs.lan.${CLUSTER_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: pbs.lan.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxmox-backup
                port:
                  name: https
