kubernetes/apps/apps/external-proxy/proxmox.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-lan-https-insecure@kubernetescrd
spec:
  ports:
    - name: https
      port: 8006
      targetPort: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
  namespace: external-proxy
subsets:
  - addresses:
      - ip: ${PROXMOX_IP}
    ports:
      - name: https
        port: 8006
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/hostname: pve.lan.${CLUSTER_DOMAIN}
    external-dns.kubernetes.io/hostname: pve.lan.${CLUSTER_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: pve.lan.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proxmox
                port:
                  name: https
