kubernetes/apps/apps/external-proxy/z2m.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
  namespace: external-proxy
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: zigbee2mqtt
  namespace: external-proxy
subsets:
  - addresses:
      - ip: ${ZIGBEE2MQTT_IP}
    ports:
      - name: http
        port: 8080
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: external-proxy
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-gatekeeper-auth-chain@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.kubernetes.io/hostname: z2m.lan.${CLUSTER_DOMAIN}
spec:
  ingressClassName: traefik
  rules:
    - host: z2m.lan.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zigbee2mqtt
                port:
                  name: http
